# Mikoto

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  engine-config.toml
Mikoto/: CMakeLists.txt
Mikoto-Editor/: Application.hh  CMakeLists.txt  ConsoleManager.hh  Editor.hh  EditorApp.hh  EditorCamera.hh  EditorLayer.hh  EditorRunner.hh  Layer.hh  Panel.hh
Mikoto-Editor/EditorModels/: DockSpaceControlFlags.hh  Enums.hh
Mikoto-Editor/GUI/: BackendImplementation.hh  IconsFontAwesome5.h  ImGuiManager.hh  ImGuiUtils.hh  ImGuiVulkanBackend.hh  RenderViewport.hh
Mikoto-Editor/Layers/: EditorLayer.hh
Mikoto-Editor/Models/: DockSPaceCallbacks.hh  EntityCreateInfo.hh
Mikoto-Editor/Panels/: AssetsManagerPanel.hh  ConsolePanel.hh  ContentBrowserPanel.hh  HierarchyPanel.hh  InspectorPanel.hh  MaterialEditorPanel.hh  Panel.hh  RendererPanel.hh  ScenePanel.hh  ScenePanelOpenGLImpl.hh  ScenePanelVulkanImpl.hh  SettingsPanel.hh  StatsPanel.hh
Mikoto-Editor/Project/: Project.hh  ProjectSerializer.hh
Mikoto-Editor/Resources/imgui/: imgui.ini
Mikoto-Editor/Scene/: SceneManager.hh
Mikoto-Editor/Tools/: ConfigLoader.hh  ConsoleManager.hh  Project.hh
Mikoto-Editor/src/: Application.cc  AssetsManagerPanel.cc  ConsoleManager.cc  ConsolePanel.cc  ContentBrowserPanel.cc  Editor.cc  EditorApp.cc  EditorCamera.cc  EditorLayer.cc  EditorRunner.cc  EditorSandbox.cc  EntryPoint.cc  HierarchyPanel.cc  ImGuiManager.cc  ImGuiVulkanBackend.cc  InspectorPanel.cc  Main.cc  MaterialEditorPanel.cc  Project.cc  ProjectSerializer.cc  RendererPanel.cc  SceneManager.cc  ScenePanel.cc  SettingsPanel.cc  StatsPanel.cc
Mikoto-Engine/: CMakeLists.txt
Mikoto-Engine/Assets/: AssetsManager.hh
Mikoto-Engine/Common/: Common.hh  Math.hh  RenderingUtils.hh  StringUtils.hh  VulkanUtils.hh
Mikoto-Engine/Core/: Application.hh  Assert.hh  CoreEvents.hh  Engine.hh  EventManager.hh  FileManager.hh  Layer.hh  MouseButtons.hh  Serializer.hh  TimeManager.hh
Mikoto-Engine/GUI/: IconsMaterialDesignIcons.h  ImGuiManager.hh  ImGuiUtils.hh  ImGuiVulkanBackend.hh
Mikoto-Engine/Platform/: GlfwWindow.hh  InputManager.hh  Window.hh  XPWindow.hh
Mikoto-Engine/Profiling/: Timer.hh
Mikoto-Engine/Renderer/: Mesh.hh  Model.hh  RenderCommand.hh  RenderContext.hh  Renderer.hh  RendererBackend.hh
Mikoto-Engine/Renderer/Buffers/: FrameBuffer.hh  IndexBuffer.hh
Mikoto-Engine/Renderer/Material/: DefaultMaterial.hh  Material.hh  PhysicallyBasedMaterial.hh  Shader.hh  StandardMaterial.hh  Texture2D.hh
Mikoto-Engine/Renderer/OpenGL/: OpenGLContext.hh  OpenGLShader.hh  OpenGLVertexArray.hh  OpenGLVertexBuffer.hh
Mikoto-Engine/Renderer/Vulkan/: DeletionQueue.hh  DescriptorManager.hh  VulkanBuffer.hh  VulkanColoredMaterial.hh  VulkanCommandPool.hh  VulkanContext.hh  VulkanFrameBuffer.hh  VulkanImage.hh  VulkanIndexBuffer.hh  VulkanPipeline.hh  VulkanRenderer.hh  VulkanShader.hh  VulkanStandardMaterial.hh  VulkanSwapChain.hh  VulkanTexture2D.hh  VulkanWireframeMaterial.hh
Mikoto-Engine/Scene/: Component.hh  EditorCamera.hh  Entity.hh  Scene.hh  SceneManager.hh
Mikoto-Engine/Threading/: TaskManager.hh
Mikoto-Engine/src/: Application.cc  AssetsManager.cc  ConsoleManager.cc  DescriptorManager.cc  EditorCamera.cc  Engine.cc  EntryPoint.cc  EventManager.cc  GlfwWindow.cc  ImGuiManager.cc  ImGuiOpenGLBackend.cc  ImGuiVulkanBackend.cc  IndexBuffer.cc  InputManager.cc  Logger.cc  Material.cc  Mesh.cc  Model.cc  OpenGLContext.cc  OpenGLDefaultMaterial.cc  OpenGLIndexBuffer.cc  OpenGLRenderer.cc  PhysicallyBasedMaterial.cc  RenderContext.cc  Renderer.cc  RendererAPI.cc  RendererPanel.cc  Scene.cc  SceneCamera.cc  SceneManager.cc  Serializer.cc  Shader.cc  Texture2D.cc  Timer.cc  VulkanBuffer.cc  VulkanColoredMaterial.cc  VulkanCommandPool.cc  VulkanContext.cc  VulkanFrameBuffer.cc  VulkanImage.cc  (+14 more)
Mikoto/Assets/: AssetsManager.hh  Font.hh  Mesh.hh  Model.hh  Texture.hh
Mikoto/Audio/: Audio.hh
Mikoto/Common/: Application.hh  Common.hh  ConfigLoader.hh  Constants.hh  Math.hh  OpenGLUtils.hh  Random.hh  Registry.hh  RenderingUtils.hh  Singleton.hh  StringUtils.hh  Types.hh  VulkanUtils.hh
Mikoto/Core/: Assert.hh  CommandLineParser.hh  Engine.hh  Event.hh  EventManager.hh  FileManager.hh  Layer.hh  TimeManager.hh
Mikoto/Core/Events/: CoreEvents.hh  Event.hh
Mikoto/Core/Input/: KeyCodes.hh  MouseCodes.hh
Mikoto/Core/Logging/: Assert.hh  Logger.hh  StackTrace.hh
Mikoto/GUI/: ImGuiOpenGLBackend.hh  ImGuiUtils.hh  ImGuiVulkanBackend.hh
Mikoto/Models/: ApplicationData.hh  BufferElement.hh  BufferLayout.hh  ConfigOptions.hh  Enums.h  Enums.hh  GameObjectData.hh  LightData.hh  LightRenderData.hh  LightTypeData.hh  MeshData.hh  ModelLoadInfo.hh  RenderContextData.hh  RenderInfo.hh  RendererDrawData.hh  RenderingStats.hh  SceneMetaData.hh  ScenePrepareData.hh  ShaderCreateInfo.hh  StandardMaterialCreateData.hh  SystemData.hh  TransformData.hh  VertexBufferCreateInfo.hh  WindowProperties.hh
Mikoto/Physics/: Physics.hh
Mikoto/Platform/: InputManager.hh  Window.hh  XPWindow.hh
Mikoto/Profiling/: Timer.hh
Mikoto/Renderer/: Mesh.hh  Model.hh  RenderCommand.hh  RenderContext.hh  Renderer.hh  RendererBackend.hh  VertexBuffer.hh
Mikoto/Scene/: Camera.hh  Component.hh  EditorCamera.hh  Entity.hh  OrthographicCamera.hh  Scene.hh  SceneCamera.hh  SceneManager.hh  SceneSerializer.hh
Mikoto/Threading/: TaskManager.hh  Worker.hh
Mikoto/src/: AssetsManager.cc  AssetsSystem.cc  Audio.cc  AudioSystem.cc  DescriptorManager.cc  EditorCamera.cc  Engine.cc  EngineSystem.cc  EventManager.cc  EventSystem.cc  FileSystem.cc  Font.cc  FrameBuffer.cc  GUISystem.cc  ImGuiManager.cc  ImGuiVulkanBackend.cc  IndexBuffer.cc  InputManager.cc  InputSystem.cc  Logger.cc  MainWindow.cc  Material.cc  Mesh.cc  Model.cc  OpenGLContext.cc  OpenGLFrameBuffer.cc  OpenGLRenderer.cc  OpenGLShader.cc  OpenGLTexture2D.cc  OpenGLUtils.cc  OpenGLVertexArray.cc  OpenGLVertexBuffer.cc  OrthographicCamera.cc  PhysicallyBasedMaterial.cc  Physics.cc  PhysicsSystem.cc  RenderCommand.cc  RenderContext.cc  RenderQueue.cc  RenderSystem.cc  (+40 more)
(+407 files in other folders)
